fix spacing and desc

--- a/app/styles/partials/pages/Quickpost/_pageMain.scss
+++ b/app/styles/partials/pages/Quickpost/_pageMain.scss
@@ -107,7 +107,7 @@
 }
 
 #postForm{
-  margin-top: 2em;
+  margin-top: 1em;
 }
 
 .star{
@@ -117,8 +117,7 @@
 }
 
 .description{
-  margin-top: 0.4em;
-  margin-right: -0.25em;
+  margin-top: 0.3em;
   position: relative;
   .icon-contextual-info{
     width: 15px;
@@ -165,6 +164,7 @@
   border-bottom: solid 1px #a2a2a1;
   padding-left: 0.4em;
   margin-top: 1em;
+  margin-bottom: 0.2em;
   position: relative;
 }
 
@@ -285,8 +285,7 @@ textarea.error{
    overflow: hidden;
    border-radius: 10px;
    padding: 0 0.5em;
-   margin-bottom: 0.5em;
-   margin-top: 2em;
+   margin-top: 1em;
 }
 
 .floating-tooltip{
